# Uniboard-RP

./: CMakeLists.txt  README.md  Uniboard-RP.c  tone_to_freq.h  uniboard_def.h  ws2812.c
uniboard_lib/: CMakeLists.txt  lcd_1602_i2c.c  lcd_1602_i2c.h  uniboard_def.h  util.c  util.h  ws2812.c
